--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-phone-input",
   "version": "0.2.4",
   "description": "Phone input box for React Native",
-  "main": "lib/index.js",
+  "main": "src/PhoneInput.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
